--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
-<<<<<<< HEAD
 {
   "name": "Nosso Diário",
   "short_name": "Diário",
   "description": "Nossos momentos especiais reunidos em um só lugar.",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffe6f0",
   "theme_color": "#e75480",
@@ -20,26 +19,3 @@
     }
   ]
 }
-=======
-{
-  "name": "Nosso Diário",
-  "short_name": "Diário",
-  "description": "Nossos momentos especiais reunidos em um só lugar.",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#ffe6f0",
-  "theme_color": "#e75480",
-  "icons": [
-    {
-      "src": "img/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "img/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
->>>>>>> afc12bb28d7ec8fb39fe6ed6f920a8384294db7e
